# music-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  test_ingestion_api.py
src/ragpipe/: __init__.py  container.py  main.py
src/ragpipe/application/: __init__.py
src/ragpipe/application/pipelines/: __init__.py  audio_pipeline.py  base_pipeline.py  metadata_pipeline.py  transcript_pipeline.py
src/ragpipe/application/services/: __init__.py  chunk_manager.py  duplicate_detector.py  embedding_manager.py  enrichment_service.py  job_manager.py  media_registrar.py  metadata_synchronizer.py  migration_manager.py  pipeline_orchestrator.py  recovery_manager.py  search_service.py  status_service.py  system_manager.py  worker_manager.py
src/ragpipe/config/: __init__.py  settings.py
src/ragpipe/domain/: __init__.py  exceptions.py
src/ragpipe/domain/events/: __init__.py  events.py
src/ragpipe/domain/models/: __init__.py  chunk.py  embedding.py  media.py  migration.py  modality.py  pipeline.py
src/ragpipe/domain/ports/: __init__.py  chunker.py  embedding_provider.py  event_bus.py  file_storage.py  lock_manager.py  media_repository.py  metrics_collector.py  state_store.py  vector_repository.py
src/ragpipe/infrastructure/: __init__.py
src/ragpipe/infrastructure/chunkers/: __init__.py
src/ragpipe/infrastructure/database/: engine.py  media_repository.py  models.py  state_store.py
src/ragpipe/infrastructure/embedders/: __init__.py  clap_embedder.py  mock_embedder.py  sentence_transformer.py
src/ragpipe/infrastructure/events/: __init__.py  async_event_bus.py
src/ragpipe/infrastructure/locking/: __init__.py  db_lock_manager.py
src/ragpipe/infrastructure/metrics/: __init__.py  prometheus_metrics.py
src/ragpipe/infrastructure/storage/: __init__.py  local_file_storage.py
src/ragpipe/infrastructure/vector/: __init__.py  qdrant_repository.py
src/ragpipe/interfaces/api/: __init__.py  chunk_routes.py  collection_routes.py  (+14 more)
(+26 files in other folders)
